# geodesic-graph

./: CMakeLists.txt  readme.md
scripts/: build.py
source/: geodesic_graph.cpp  geodesic_graph.h  main.cpp
source/ext/yocto-gl/: CMakeLists.txt
source/ext/yocto-gl/tests/: _results
source/ext/yocto-gl/yocto/: yocto_sceneio.cpp  yocto_trace.h
source/parallel/: main.cpp  mesh_ripper.h
